🔧 Update golangci-lint config for v2
- Add version: "2" field
- Move goimports to formatters section
- Disable errcheck (too noisy for this codebase)
- Fix staticcheck S1017 warning in preset.go
- Apply goimports formatting fixes

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,40 +1,31 @@
+version: "2"
+
 run:
   timeout: 5m
   modules-download-mode: readonly
 
 linters:
+  disable:
+    - errcheck        # Too noisy for this codebase
   enable:
-    # Default linters
-    - errcheck
-    - gosimple
-    - govet
-    - ineffassign
-    - staticcheck
-    - unused
-
-    # Additional linters
-    - goimports       # Check import order
+    # Additional linters (default linters are enabled automatically)
     - misspell        # Spell checking
-    - errorlint       # Error wrapping best practices
     - nilerr          # nil error checks
-    - exhaustive      # Switch exhaustiveness
 
-linters-settings:
+formatters:
+  enable:
+    - goimports
+
+settings:
   goimports:
-    local-prefixes: github.com/d2verb/alpaca
-
-  errcheck:
-    check-type-assertions: true
-    check-blank: true
+    local-prefixes:
+      - github.com/d2verb/alpaca
 
   govet:
     enable-all: true
 
   misspell:
     locale: US
-
-  exhaustive:
-    default-signifies-exhaustive: true
 
 issues:
   exclude-rules:
