🔧 Use GitHub native changelog for releases

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -34,11 +34,7 @@ checksum:
   name_template: 'checksums.txt'
 
 changelog:
-  sort: asc
-  filters:
-    exclude:
-      - '^docs:'
-      - '^test:'
+  use: github-native
 
 brews:
   - name: alpaca
