--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -50,6 +50,7 @@ tasks:
     desc: Run linter
     cmds:
       - golangci-lint run ./...
+      - deadcode ./cmd/...
 
   fmt:
     desc: Format code
@@ -87,6 +88,7 @@ tasks:
     cmds:
       - go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
       - go install golang.org/x/tools/cmd/goimports@latest
+      - go install golang.org/x/tools/cmd/deadcode@latest
       - go install github.com/matryer/moq@latest
 
   # GUI (macOS)
