✅ Add integration tests for pull, selfupdate, and llama packages
- Add httptest-based integration tests for Puller and Updater
- Add fake binary approach for Process tests (testdata/fakeproc)
- Refactor baseURL handling: remove redundant apiURL field in pull,
  unify naming convention between pull and selfupdate
- Update deadcode to include test files (-test flag)

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -50,7 +50,7 @@ tasks:
     desc: Run linter
     cmds:
       - golangci-lint run ./...
-      - deadcode ./cmd/...
+      - deadcode -test ./...
 
   fmt:
     desc: Format code
