♻️ Switch from Homebrew Cask to Formula
CLI tools should use Formula, not Cask.
- Change homebrew_casks to brews
- Update directory from Casks to Formula
- Use post_install instead of hooks.post.install
- Replace staged_path with bin for correct path reference

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -37,9 +37,9 @@ checksum:
 changelog:
   use: github-native
 
-homebrew_casks:
+brews:
   - name: alpaca
-    directory: Casks
+    directory: Formula
     repository:
       owner: d2verb
       name: homebrew-tap
@@ -47,26 +47,26 @@ homebrew_casks:
     homepage: https://github.com/d2verb/alpaca
     description: Lightweight llama-server wrapper for macOS
     license: MIT
-    hooks:
-      post:
-        install: |
-          require "digest"
-          require "json"
-          require "fileutils"
+    install: |
+      bin.install "alpaca"
+    post_install: |
+      require "digest"
+      require "json"
+      require "fileutils"
 
-          receipt_dir = "#{ENV["HOME"]}/.alpaca"
-          FileUtils.mkdir_p(receipt_dir)
+      receipt_dir = "#{ENV["HOME"]}/.alpaca"
+      FileUtils.mkdir_p(receipt_dir)
 
-          binary_path = "#{staged_path}/alpaca"
-          fingerprint = Digest::SHA256.file(binary_path).hexdigest
-          timestamp = Time.now.utc.iso8601
+      binary_path = "#{bin}/alpaca"
+      fingerprint = Digest::SHA256.file(binary_path).hexdigest
+      timestamp = Time.now.utc.iso8601
 
-          receipt = {
-            schema_version: 1,
-            install_source: "brew",
-            installed_at: timestamp,
-            binary_path: binary_path,
-            binary_fingerprint: "sha256:#{fingerprint}"
-          }
+      receipt = {
+        schema_version: 1,
+        install_source: "brew",
+        installed_at: timestamp,
+        binary_path: binary_path,
+        binary_fingerprint: "sha256:#{fingerprint}"
+      }
 
-          File.write("#{receipt_dir}/install.json", JSON.pretty_generate(receipt))
+      File.write("#{receipt_dir}/install.json", JSON.pretty_generate(receipt))
